Layout scale (Based on 16:10). Added new page
* Layout now scales with the current resolution, minimum resolution is
1280x720.
* Added startup popup showing play button.
* After submit score, will now show play button instead of starting
another game

--- a/Tetris/Tetris.csproj
+++ b/Tetris/Tetris.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\StartPopup.xaml.cs">
+      <DependentUpon>StartPopup.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Pause.xaml.cs">
       <DependentUpon>Pause.xaml</DependentUpon>
     </Compile>
@@ -102,6 +105,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\StartPopup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
